Project

General

Profile

Actions

Bug #40784

closed

mds: metadata changes may be lost when MDS is restarted

Added by shen hang almost 5 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
nautilus,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Assumed a client copied some obj to another location in ceph. when early_replied was received , the cp command would return normally。But the op may not be journaled when the mds was restarted. If the client didn't send reconnect msg duiring reconnect phase in time,t he obj may not exists in the destination location.
It looks like below:

:/zzz/src1
  1. cp src969 src123
    :/zzz/src1
  2. ls
    ^C^C^C^C^C^C^C^C
    :/zzz/src1
  3. ls
    src969

Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #43344: mimic: mds: metadata changes may be lost when MDS is restartedRejectedActions
Copied to CephFS - Backport #43345: nautilus: mds: metadata changes may be lost when MDS is restartedResolvedNathan CutlerActions
Actions #1

Updated by Patrick Donnelly almost 5 years ago

  • Project changed from Ceph to CephFS
  • Subject changed from data may be lost when mds is restarted,and client didn't send reconnect msg during reconnect phase to mds: data may be lost when mds is restarted,and client didn't send reconnect msg during reconnect phase
  • Status changed from New to Fix Under Review
  • Assignee set to shen hang
  • Start date deleted (07/16/2019)
  • Backport changed from nautilus,mimic,luminous to nautilus,mimic
  • Component(FS) MDS added
Actions #2

Updated by Patrick Donnelly over 4 years ago

  • Subject changed from mds: data may be lost when mds is restarted,and client didn't send reconnect msg during reconnect phase to mds: metadata changes may be lost when MDS is restarted
  • Tags deleted (cephfs mds )
Actions #3

Updated by Patrick Donnelly over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #43344: mimic: mds: metadata changes may be lost when MDS is restarted added
Actions #5

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #43345: nautilus: mds: metadata changes may be lost when MDS is restarted added
Actions #6

Updated by Nathan Cutler about 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF